--- a/portfolio/styless.css
+++ b/portfolio/styless.css
@@ -31,6 +31,47 @@
     transition: background-color 0.3s ease;
 }
 
+/* drop down menu */
+.nav-link {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    color: black;
+}
+
+.nav-link:hover {
+    background-color: #ddd;
+}
+
+.dropdown {
+    position: relative;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    background-color: white;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    width: 200px;
+}
+
+.dropdown-content a {
+    padding: 10px;
+    display: block;
+    text-decoration: none;
+    color: black;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 
 .container{
     display: flex;
@@ -329,4 +370,184 @@
     margin-left: 70vh;
     
 }
+
+
+
+/* Project page */
+.project-title{
+    text-align: center;
+    font-family: "jaini";
+    color: #218838;
+}
+
+.projects-list{
+    text-align: center;
+}
+.projects-list a{
+    text-decoration: none;
+    margin: 5vh;
+    font-size: 25px;
+    font-family: "jaini";
+}
+.projects-list .all-project{
+    color: #218838;
+}
+.projects-list .designed-project{
+    color: goldenrod;
+}
+.projects-list .all-project{
+    color: blueviolet;
+}
+
+.demo-project-1 {
+    display: grid;
+    grid-template-columns: repeat(3, 0.5fr); 
+    grid-template-rows: repeat(2, auto); 
+    gap: 5px; 
+    padding: 10px;
+    margin-left: 19vh;
+}
+
+.image-holder {
+    position: relative;
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+
+}
+
+.image-holder img {
+    max-width: 100%;
+    height: 30vh;
+    display: block;
+    margin: 0 auto 10px;
+}
+
+.image-holder p {
+    margin: 0;
+    font-size: 14px;
+}
+
+/* Overlay CSS */
+.i-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.image-holder:hover .i-overlay {
+    opacity: 1.5;
+}
+
+.all-project-display h1{
+    text-align: center;
+    color: blueviolet;
+    font-family: "jaini";
+    font-size: 35px;
+}
+
+
+.develop-project{
+    text-align: center;
+    color: goldenrod;
+    font-family: "jaini";
+    font-size: 25px;
+}
+
+.development-title{
+    text-align: center;
+    color: blueviolet;
+    font-family: "jaini";
+    font-size: 25px;
+}
+
+
+/* site reoprt  */
+/* logo */
+.logo{
+    display: flex;
+    justify-content: center;
+}
+
+
+.college-info{
+    text-align: center;
+}
+
+.college-info .college-name{
+    color: rgb(181, 3, 3);
+    font-size: 13px;
+}
+
+.college-info .univesity-name{
+    font-size: 13px;
+}
+
+.project-name{
+    text-align: center;
+    font-size: 15px;
+    margin-top: 5vh;
+}
+
+.project-report{
+    text-align: center;
+    font-size: 15px;
+    margin-top:5vh;
+}
+
+
+.submission-detail{
+    text-align: center;
+    font-size: 13px;
+    margin-top: 5vh;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
