--- a/portfolio/styless.css
+++ b/portfolio/styless.css
@@ -415,6 +415,7 @@
 }
 
 
+
 .develop-project{
     text-align: center;
     color: goldenrod;
@@ -477,6 +478,10 @@
     
 }
 
+.video2{
+    display: none;
+}
+
 /* Site report table of content */
 .index h2 {
     text-align: left;
@@ -496,49 +501,380 @@
     text-decoration: none
 }
 
-.into-part h3{
-    font-weight: normal;
+/* Introduction part */
+
+.introduction-part{
+    display: flex;
+    margin-left: 5vh;
+}
+.introdunction-image img{
+    height: 60vh;
+    width:80vh;
+    /* margin-left:75vh; */
+    
+}
+.into-part{
+    font-size: 16px;
+    text-align: left;
+    margin-left: 24vh;
 }
 
-.primary-obj ul li{
-    font-size:15px;
+
+.experience-part h1{
+    font-size: 20px;
+    text-align: left;
+    margin-left: 30vh;
 }
 
-/* experience  */
-.experience-part h3{
-    font-weight: normal;
+.experience-part p{
+    font-size: 17px;
+    text-align: left;
+    margin-left: 30vh;
+}
+.experience-part h3 { 
+    /* font-size: 20px; */
+    text-align: left;
+    margin-left: 30vh;
+}
+
+
+.design-part{
+    display: flex;
+    margin-left: 5vh;
+}
+.design-images .footer-image{
+    height: 20vh;
+    width: 50vh;
+    
+    
+}
+.design-images{
+    display:grid; 
+    /* margin-right: 9vh; */
+    grid-template-columns: repeat(2, 50vh); 
+    grid-template-rows: repeat(2, auto); 
+    
+} 
+
+.design-images .contact-image{
+    height: 20vh;
+   
+}
+
+.design-images .home-image{
+    height: 20vh;
+    
+}
+.design-images .nav-image{
+    height: 60vh;
+   
+}
+
+.design-images .project-image{
+    height: 20vh;
+    
+}
+
+.design-images .site-image{
+    height: 20vh;
+   
+}
+
+.design-images .video-image{
+    height: 20vh;
+  
+}
+
+.footer-info-overlay {
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+
+.footer-image {
+    width: 50vh;
+    height: auto;
+    display: block;
+}
+
+.i-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.5); 
+    color: #fff; 
+    text-align: center;
+    padding: 10px;
+    opacity: 0; 
+    transition: opacity 0.5s ease; 
+}
+
+.footer-info-overlay:hover .i-overlay {
+    opacity: 1; 
+}
+
+.website-design{
+    font-size: 20px;
+    text-align: left;
+    margin-left: 23vh;
+}
+
+.website-design p{
+    font-size: 17px;
+    text-align: left;
+}
+
+.module-experience h1{
+    font-size: 20px;
+    text-align: left;
+    margin-left: 30vh;
+}
+
+.module-experience p{
+    font-size: 17px;
+    text-align: left;
+    margin-left: 30vh;
+}
+.module-experience h3{
+    font-size: 16px;
+    text-align: left;
+    margin-left: 30vh;
+}
+
+
+.web-development-progress h1{
+    font-size: 20px;
+    text-align: left;
+    margin-left: 30vh;
+
+}
+
+.progress-image{
+    margin-left: 15vh;
+    display: grid;
+    grid-template-columns: repeat(2, 0.1fr); 
+    grid-template-rows: repeat(2, 0.1fr); 
+}
+
+.validation-heading h1{
+    font-size: 20px;
+    text-align: left;
+    margin-left: 30vh;
+}
+
+.reference-title h1{
+    text-align: left;
+    margin-left: 25vh;
 }
 
 
 
 
+/* for hamburger icon */
+#bars{
+	display: none;
+}
+
+.togglearea{
+    background-color: green;
+    padding: 20px;	
+    width: 50px;
+	justify-content: flex-end;
+	display: none;
+}
+.togglearea label
+{
+	background-color: white;
+	height: 45px;
+	width: 50px;
+	color: black;
+	border-radius: 6px;
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+.togglearea label span{
+	background-color: black;
+	height: 4px;
+	width: 70%;
+	margin: 2px 0px;
+}
+
+@media screen and (max-width:1000px){
+
+    .togglearea{	
+		display: block;
+        width:60vh;
+    }
+    .sidebar {
+        display: none;
+        margin-top: 0.5vh;
+        height: 80vh;
+    }
+    #bars:checked + .sidebar{
+        display: block
+    }
+
+    .sidebar a{
+        display: inline-block;
+        font-size: 30px;
+    } 
+    .aboutme {
+        margin-left: -30vh;
+        margin-top: -20vh;
+        font-size: 30px;
+    }
+    .Software-Engineering{
+        margin-top: -20vh;
+        font-size: 35px;
+    }
+    .desc .name{
+        margin-left: -30vh;
+        font-size: 40px;
+        margin-top: -10vh;
+    }
+    .desc .other-desc{
+        margin-left: -30vh;
+        font-size: 40px;
+    
+    }
+    .tag-line #dream-text{
+        font-size: 40px; 
+    }
+
+    .image-container .tiger{
+        display: none;
+    }
+    .footer{
+        /* margin-top: -20vh; */
+        width: 60vh;
+        height: 25vh;
+    }
+    .footer-info{
+        margin-left: -0.5vh;
+        font-size: 25px;
+    }
+    .icons{
+        margin-top: -0.3vh;
+    }
+
+    /* project page media query */
+
+    .project-title{
+        font-size: 40px;
+    }
+    .projects-list a{
+        font-size: 45px;
+        margin:5vh;
+    }
+    .all-project-display h1{
+        font-size: 45px;
+    }
+
+    .demo-project-1 {
+        display: block;
+        justify-content: center;
+        margin-left: 5vh;
+        width: 50vh;
+    }
+
+    .i-overlay p{
+        font-size: 30px;
+    }
+
+    .projects-list .fa-hand-point-right{
+        display: none;
+    }
+    .all-project-display .fa-hand-point-right{
+        display: none;
+    }
 
 
+    /* contact page */
+    .contact-info{
+        display: block;
+    }
 
+    .map-image{
+        margin-left: -30vh;
+        height: 40vh;
+    }
 
+    .contact-me{
+        margin-left:25vh;
+        /* text-align: center; */
+        justify-content: center;
+        font-size: 30px;
+    }
 
+    .contact-form{
+        margin-left: -5vh;
+        /* height:25vh; */
+        width: 25vh;
+    }
 
+    .get-in-touch{
+        margin-left:25vh;
+        /* text-align: center; */
+        justify-content: center;
+        font-size: 30px;
+    }
 
+    /* video Demo site */
+    .video2{
+        display: block;
+        margin-left: 10vh;
+        height: 44vh;
+    }
 
+    /* site report */
+    .index{
+        margin-left: -25vh;
+    }
+    .introduction-part{
+        margin-left: -25vh;
+        display: block;
+    }
+    .introduction-part h1, h3, h4{
+        margin-left: 3vh;
+    }
+    .introduction-part p{
+        margin-left: 3vh;
+    }
+    .introdunction-image img{
+        height: 30vh;
+        width: 35vh;
+        
+    }
 
+    .experience-part h1{
+        margin-left: 3vh;
+    }
 
+    .experience-part h3{
+        margin-left: 3vh;
+    }
+    .experience-part p{
+        margin-left: 3vh;
+    }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    .design-part{
+        margin-left: -20vh;
+    }
+    .design-images{
+        display: none;
+    }
+    
+    .module-experience{
+       display: none;
+    }
+    
+    .progress-image .progress-image-info-overlay{
+        display: none;
+    }
+}
